# RoboconDetectionFruit

./: README.md  setup.sh  test.py
install/: local_setup.sh  setup.sh
install/fruit_detection/lib/fruit_detection/: listener  pubdetect  vino
install/fruit_detection/share/fruit_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocon2023_b_dash/lib/robocon2023_b_dash/: BeltLiner_Controller  Crawl_Controller  DriveMotion  Drive_Controller  MotionMaster  RopeMotion  SerialKIMD  Solenoid_Controller  Transmitter920  Upper_Controller  WallUpMotion  Xmove_Controller  joy_enumerate_devices  joy_node  receiver
install/robocon2023_b_dash/share/robocon2023_b_dash/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocon2023_b_dash/share/robocon2023_b_dash/cmake/: robocon2023_b_dashConfig-version.cmake  robocon2023_b_dashConfig.cmake
install/robocon2023_b_dash/share/robocon2023_b_dash/environment/: ament_prefix_path.dsv  path.dsv
install/robocon2023_b_dash_receiver/lib/robocon2023_b_dash_receiver/: program_checker  receiver
install/robocon2023_b_dash_receiver/share/robocon2023_b_dash_receiver/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocon2023_b_dash_receiver/share/robocon2023_b_dash_receiver/cmake/: robocon2023_b_dash_receiverConfig.cmake
install/robocon2023_b_dash_transceiver/lib/robocon2023_b_dash_transceiver/: joy_enumerate_devices  joy_node  program_checker_node  usb920_node
install/robocon2023_b_dash_transceiver/share/robocon2023_b_dash_transceiver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robocon2023_b_dash_transceiver/share/robocon2023_b_dash_transceiver/cmake/: ament_cmake_export_targets-extras.cmake  robocon2023_b_dash_transceiverConfig.cmake
install/ros_to_kimd/lib/ros_to_kimd/: ControlKimd  joysubtest
install/ros_to_kimd/share/ros_to_kimd/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_to_kimd/share/ros_to_kimd/cmake/: ros_to_kimdConfig-version.cmake  ros_to_kimdConfig.cmake
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: package.sh
install/time_practice/lib/time_practice/: talker
install/time_practice/share/time_practice/: local_setup.sh  package.bash  package.sh  package.zsh
install/usb920_ver2/lib/usb920_ver2/: usb920_ver2_node
install/usb920_ver2/share/usb920_ver2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/fruit_detection/: package.xml  setup.py
src/fruit_detection/fruit_detection/: pubdetect.py  publisher_member_function.py  readme.md  subscriber_member_function.py
src/fruit_detection/fruit_detection/install/: local_setup.sh  setup.sh
src/fruit_detection/fruit_detection/log/: latest_build
src/fruit_detection/fruit_detection/v8-v26-1017_openvino_model/: metadata.yaml  v8-v26-1017.xml
src/fruit_detection/install/: local_setup.sh  setup.bash  setup.sh
src/fruit_detection/install/fruit_detection/share/fruit_detection/: package.bash  package.sh  package.xml
src/fruit_detection/log/: latest_build
src/fruit_detection/resource/yolov8/: main.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/remove_920mhz/: a.out  serial_read.c  serial_send.py
src/robocon2023_b_dash/: CMakeLists.txt  package.xml
src/robocon2023_b_dash/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robocon2023_b_dash/install/robocon2023_b_dash/lib/robocon2023_b_dash/: Receiver920  SerialKIMD  Upper_Controller
src/robocon2023_b_dash/install/robocon2023_b_dash/share/robocon2023_b_dash/: package.bash  package.sh  package.zsh
src/robocon2023_b_dash/launch/: Receiver920_launch.py  Transmitter920_launch.py  all_launch.py  all_launch.py.old  all_launch_920Mhz.py  joy_practice.py  joy_pram1.yaml  no_joy_launch.py  no_joy_recognitoin_launch.py  no_serial_launch.py  no_serial_launch_920Mhz.py  no_serial_no_joy_launch.py
src/robocon2023_b_dash/launch/install/: local_setup.sh  setup.sh
src/robocon2023_b_dash/launch/log/: latest_build
src/robocon2023_b_dash/log/: latest_build
src/robocon2023_b_dash/src/: BeltLiner_Controller.cpp  BeltLiner_Controller.hpp  Crawl_Controller.cpp  Crawl_Controller.hpp  Drive_Controller.cpp  Drive_Controller.hpp  Drive_Motion.cpp  Drive_Motion.hpp  Kiwi_Motion.cpp  Kiwi_Motion.hpp  MotionMaster.cpp  MotionMaster.hpp  Receiver920.cpp  Receiver920.hpp  Rope_Motion.cpp  Rope_Motion.cpp.old  Rope_Motion.hpp  SerialKIMD.cpp  SerialKIMD.hpp  Solenoid_Controller.cpp  Solenoid_Controller.hpp  Transmitter920.cpp  Transmitter920.hpp  Upper_Controller copy 2.cpp  Upper_Controller copy.cpp  Upper_Controller.cpp  Upper_Controller.hpp  WallUp_Motion.cpp  WallUp_Motion.hpp  Xmove_Controller copy.cpp  Xmove_Controller.cpp  Xmove_Controller.hpp  receiver.cpp
src/robocon2023_b_dash/src/RoboconMsg/: ABU2023_GenericOutput_Header.c
src/robocon2023_b_dash_receiver/: CMakeLists.txt
src/robocon2023_b_dash_receiver/src/: program_checker.cpp  receiver.cpp
src/robocon2023_b_dash_transceiver/: CMakeLists.txt
src/robocon2023_b_dash_transceiver/include/robocon2023_b_dash_transceiver/: DualShock.h
src/robocon2023_b_dash_transceiver/launch/: all_launch.py
src/robocon2023_b_dash_transceiver/src/: joy.cpp  joy_enumerate_devices.cpp  program_checker.cpp  usb920_node.cpp
src/ros_to_kimd/: CMakeLists.txt
src/ros_to_kimd/install/: local_setup.sh  setup.sh
src/ros_to_kimd/log/: latest_build
src/ros_to_kimd/src/: ABU2023_GenericOutput_Header.h  ControlKimd.cpp  kimd_send_joystick.cpp
src/time_practice/: CMakeLists.txt
src/time_practice/src/: time_practice.cpp
src/usb920_ver2/: CMakeLists.txt
src/usb920_ver2/src/: usb920_ver2_node.cpp
(+31 files in other folders)
